# kaggle

./: .gitignore  README.md  pyproject.toml  ruff.toml
competitions/house_prices/pandas/: pandas-submission_house_prices-pandas.ipynb
competitions/vbbdai_challenge/: flights_jumpstart_RandomForest.ipynb
competitions/vbbdai_challenge/data/: flights_data_dictionary.xlsx  sample_test.csv  sample_train.csv
kaggle/competitions/house_prices/pandas/: pandas-submission_house_prices-pandas.ipynb
kaggle/competitions/house_prices/polars/: polars-submission_house_prices.ipynb
kaggle/competitions/house_prices/submissions/: [GradientBoosting] pandas-house_prices.csv  [RandomForest] pandas-house_prices.csv  [RandomForest] polars-house_prices.csv
