[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = "Repository containing the code used on different Kaggle competitions"
authors = ["LuisRiA <luisridruejo@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.3.0"
pandas = "^2.0.3"
polars = "^0.18.8"
numpy = "^1.25.1"
ruff = "^0.0.280"
plotnine = "^0.12.2"
seaborn = "^0.12.2"
matplotlib = "^3.7.2"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
